--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
+APP_NAME="Date Converter"
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_KEY=base64:hbaljenpkHXyXGvDAqfeEhGL4GELpNSXsqCohfjIf+Y=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=date-converter
 DB_USERNAME=root
 DB_PASSWORD=
 
